@@ -11,8 +11,8 @@
 # if you're sharing your code publicly.
 
 development:
-  email_provider_username: <%= ENV["MANDRILL_USERNAME"] %>
-  email_provider_api_key: <%= ENV["MANDRILL_API_KEY"] %>
+  email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
+  email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>
   domain_name: example.com
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
@@ -25,8 +25,8 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  email_provider_username: <%= ENV["MANDRILL_USERNAME"] %>
-  email_provider_api_key: <%= ENV["MANDRILL_API_KEY"] %>
+  email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
+  email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %> 
   domain_name: <%= ENV["DOMAIN_NAME"] %>
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
