@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.0.2 February 29, 2016 (Book Two version 3.1.0)
+
+* switch to using the SendGrid service to send email
+
 h3. 3.0.2 January 30, 2016 (Book Two version 3.0.2)
 
 * minor change 'email_provider_username' was 'mandrill_username'
